package org.example.SecondTask.service;

public interface Object {
    String printInfo();
}
