package org.example.firstTask.enums;

public enum Brand {
    VOLVO,
    RENAULT,
    MERCEDES,
    MAZ,
    MAN,
    HONDA
}
