package org.example.firstTask.enums;

public enum EngineType {
    CARBURETOR,
    DIESEL
}
